Revert "chore: unified error interface (#1940)"
This reverts commit 2df180977a1f91de05112391d2b668c1bd3bba68.
